column dnd works but still need to fix flickers; remove css that changes border width on hover

--- a/server/public/css/boardview.css
+++ b/server/public/css/boardview.css
@@ -39,12 +39,22 @@
   border: none;
 }
 
-.col-name-btn:hover {
+/* .col-name-btn:hover {
   border: 0.5px solid #292929;
 }
 
 .col-btn:hover {
   border: 0.5px solid #292929;
+} */
+
+.delete-icon {
+  font-size: 22px;
+  color: #292929;
+  font-weight: 700;
+}
+
+.delete-icon:hover {
+  color: #1db9c3;
 }
 
 .col-edit-input {
